--- a/Verse-Interpreter.csproj
+++ b/Verse-Interpreter.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.0" />
+  </ItemGroup>
+
 </Project>
