--- a/Verse-Interpreter.Console/Verse-Interpreter.Console.csproj
+++ b/Verse-Interpreter.Console/Verse-Interpreter.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<Exec Command="call antlr4 -Dlanguage=CSharp -o ..\ANTLR\C# Verse.g4" LogStandardErrorAsError="true" />
+		<Exec Command="call antlr4 -no-listener -visitor -Dlanguage=CSharp -o ../Verse-Interpreter.Model/ANTLR ../Verse.g4" LogStandardErrorAsError="true" />
 	</Target>
 
 	<ItemGroup>
