Add ANTLR NuGet package.

--- a/Verse-Interpreter.Model/Verse-Interpreter.Model.csproj
+++ b/Verse-Interpreter.Model/Verse-Interpreter.Model.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ANTLR\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.0" />
+  </ItemGroup>
+
 </Project>
