Add Microsoft Hosting extensions.

--- a/Verse-Interpreter.Console/Verse-Interpreter.Console.csproj
+++ b/Verse-Interpreter.Console/Verse-Interpreter.Console.csproj
@@ -13,6 +13,11 @@
 	</Target>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\Verse-Interpreter.Model\Verse-Interpreter.Model.csproj" />
 	</ItemGroup>
 
