--- a/Verse-Interpreter.Model/Verse-Interpreter.Model.csproj
+++ b/Verse-Interpreter.Model/Verse-Interpreter.Model.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
