--- a/Verse-Interpreter.Test/Verse-Interpreter.Test.csproj
+++ b/Verse-Interpreter.Test/Verse-Interpreter.Test.csproj
@@ -12,9 +12,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Verse-Interpreter.Model\Verse-Interpreter.Model.csproj" />
   </ItemGroup>
 
 </Project>
